# barometre-prix-web-fr

./: Cargo.toml  LICENSE  README.md
data/: barometre-prix-creation-site-web-france-2026.csv
src/: lib.rs
